adjust swagger and route
