# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Beljar",
-        "description": "Ya Belahjar",
+        "description": "Swagger Sinau",
         "contact": {
             "email": "adrian.rahmandanu2@gmail.com"
         },
@@ -13,6 +13,65 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/auth/oauth": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "User get token",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "grant_type": {
+                                        "type": "string"
+                                    },
+                                    "username": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "client_id": {
+                                        "type": "string"
+                                    },
+                                    "client_secret": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "grant_type": "password",
+                                    "username": "xxx@mail.com",
+                                    "password": "12345678",
+                                    "client_id": "your client id",
+                                    "client_secret": "your client secret"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Failed Validation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user": {
             "get": {
                 "tags": [
@@ -20,7 +79,6 @@
                 ],
                 "summary": "Get List Users",
                 "description": "Returns list user data",
-                "operationId": "ad790dea18a50ef39e12505cb4856bd2",
                 "parameters": [
                     {
                         "name": "page",
